This is to do with the listview.

--- a/SoftwareMajor/ViewStudents.xaml
+++ b/SoftwareMajor/ViewStudents.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoftwareMajor"
         mc:Ignorable="d"
-        Title="ViewStudents" Height="300" Width="300" Loaded="Window_Loaded">
+        Title="ViewStudents" Height="551" Width="668" Loaded="Window_Loaded">
     <Grid>
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="240" Margin="10,10,0,0" VerticalAlignment="Top" Width="272">
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="453" Margin="26,48,0,0" VerticalAlignment="Top" Width="612">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Firstname"  DisplayMemberBinding="{Binding Firstname}" Width="auto"/>
-                    <GridViewColumn Header="Surname" DisplayMemberBinding="{Binding Surname}" Width="auto"/>
-                    <GridViewColumn Header="DOB"  DisplayMemberBinding="{Binding DOB}" Width="auto"/>
+                    <GridViewColumn Header="Firstname"  DisplayMemberBinding="{Binding Firstname}" Width="200"/>
+                    <GridViewColumn Header="Surname" DisplayMemberBinding="{Binding Surname}" Width="200"/>
+                    <GridViewColumn Header="DOB"  DisplayMemberBinding="{Binding DOB}" Width="200"/>
                 </GridView>
             </ListView.View>
         </ListView>
